# cpplistube

./: CMakeLists.txt  LICENSE  README.md  config.ini  playlistItems.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
